@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 const passport = require('passport');
 
+
 const userController = require('../controllers/user_controller');
 
 router.post('/create',userController.create);
