@@ -1,0 +1,11 @@
+<div id="main-content" class="container">
+    <h1>Deposit Page</h1>
+    
+    <form action="/user/money/deposit-money/<%= user._id %>" method="POST">
+        
+        <input name = "amount" type="number" placeholder="Enter amount">
+        <input type="submit">
+    
+    </form>
+
+</div>
