@@ -5,6 +5,20 @@
     
     <!-- Write the aside section in here like all the options for user. They will only be visible whwn the user is logged In. -->
     
+    <button><a href="/user/create-new-account">Create New Account</a></button>
+    
+    <button><a href="/user/money/deposit">Deposit Money</a></button>
+    
+    <button><a href="/user/money/withdraw">Withdraw money</a></button>
+    
+    <button><a href="/user/money/transfer">Transfer money</a></button>
+    
+    <button><a href="/user/recent-transactions">Recent Transactions</a></button>
+    
+    <button><a href="/user/account-details">Account Details</a></button>
+    
+    <button><a href="/user/balance">Check Balance</a></button>
+
     
     
       <% } else { %>
